k8s/sinatra-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinatra-clusterip
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sinatra
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4567
