k8s/sinatra-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinatra-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: sinatra
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4567
  ClusterIP: 10.128.0.9
