k8s/sinatra-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sinatra-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: sinatra
  ports:
    # the port number that resources within the cluster will use to communicate
    - port: 8080
    # the port number of the container that listening on
      targetPort: 4567
    # the external port number to connect the node using node ip
      nodePort: 30001
